--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <header id="header">
         <nav class="container">
-            <a class="logo" href="#">beauty<span>salon</span>.</a>
+            <a class="logo" href="#">Seja<span>Você</span>.</a>
             <div class="menu">
                 <ul class="grid">
                     <li><a class="title" href="#about">Sobre</a></li>
@@ -45,12 +45,12 @@
         <section class="section" id="home">
             <div class="container grid">
                 <div class="image">
-                    <img src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80"
+                    <img src="https://images.unsplash.com/photo-1441984904996-e0b6ba687e04?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
                         alt="Mulher sorrindo penteando outra mulher" />
                 </div>
                 <div class="text">
-                    <h2 class="title">Saúde natural para os seus cabelos</h2>
-                    <p>Um salão exclusivo em São Paulo, especilizado em tratamentos naturais.</p>
+                    <h2 class="title">Cada um brilha do seu jeito</h2>
+                    <p>Um Showrooms exclusivo em Rio de Janeiro, especilizado em moda.</p>
                     <a class="button" href="#">Agendar um horário</a>
                 </div>
             </div>
@@ -62,18 +62,14 @@
         <section class="section" id="about">
             <div class="container grid">
                 <div class="image">
-                    <img src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80"
+                    <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
                         alt="3 mulheres sorrindo">
                 </div>
                 <div class="text">
                     <h2 class="title">Sobre nós</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, neque fugit! Architecto,
-                        eius beatae excepturi possimus laborum quisquam quas? Porro illum fugit atque nulla facere iste
-                        accusamus blanditiis unde nemo.</p>
+                    <p>SEJAVOCÊ é uma empresa de comércio eletrônico. A companhia se concentra sobretudo sobre roupa femenina, mas oferece igualmente roupa masculina, acessórios, sapatos, carteiras, e outros artigos de moda. SejaVocê orienta-se principalmente para o mercados do Brasil. A marca foi fundada em 2021 e, mantém a filosofia de que “todos podem desfrutar da beleza da moda”.</p>
                     <br>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quibusdam, rem deleniti eaque
-                        id soluta ea cum nostrum saepe. Perferendis, necessitatibus nulla nobis ab error eos et officiis
-                        voluptate sed.</p>
+                    <p>SEJAVOCÊ está orgulhosa de oferecer roupas de tendência tanto para jovens mulheres como para adolescentes, a um preço acessível. SEJAVOCÊ adere ao conceito em que "Todos podem aproveitar da beleza da moda". A nossa orientação é de oferecer produtos de qualidade ao melhor preço a qualquer utilizador no mundo.</p>
                     <br>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati error consequuntur id,
                         dolorem voluptatem excepturi quas. Nisi provident ipsum iure, expedita sunt quisquam non
@@ -90,26 +86,26 @@
                 <header>
                     <h2 class="title">Serviços</h2>
                     <p class="subtitle">
-                        Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já conquistou clientes de
+                        Com mais de 10 anos no mercado, o <strong>SejaVocê</strong> já conquistou clientes de
                         inúmeros países com seus tratamentos exclusivos e totalmente naturais.
                     </p>
                 </header>
                 <div class="cards grid">
                     <div class="card">
                         <i class="icon-woman-hair"></i>
-                        <h3 class="title">Terapia capilar</h3>
+                        <h3 class="title">Ropa femenina</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus optio maiores, molestias
                             maxime eaque quas odit dolorem delectus minima modi.</p>
                     </div>
                     <div class="card">
                         <i class="icon-trim"></i>
-                        <h3 class="title">Cortes</h3>
+                        <h3 class="title">Acessorios</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus optio maiores, molestias
                             maxime eaque quas odit dolorem delectus minima modi.</p>
                     </div>
                     <div class="card">
                         <i class="icon-cosmetic"></i>
-                        <h3 class="title">Tratamentos</h3>
+                        <h3 class="title">Ropa masculina</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus optio maiores, molestias
                             maxime eaque quas odit dolorem delectus minima modi.</p>
                     </div>
@@ -189,7 +185,7 @@
 
                 <div class="text">
                     <h2 class="title">Entre em contato com a gente</h2>
-                    <p>Entre em contato com a Beautysalon, queremos tirar suas dúvidas, ouvir suas critias e sugestões.
+                    <p>Entre em contato com a Sejavocê, queremos tirar suas dúvidas, ouvir suas critias e sugestões.
                     </p>
                     <a href=" https://api.whatsapp.com/send?phone=+5511998456754SeuNúmero&text=Oi! Gostarioa de agendar um horário"
                         class="button" target="_blank"><i class="icon-whatsapp"></i>Entrar em contato</a>
@@ -199,7 +195,7 @@
                     <ul class="grid">
                         <li><i class="icon-phone"></i>11 99845-6754</li>
                         <li><i class="icon-Frame-1"></i>R. Amauri Souza, 346</li>
-                        <li><i class="icon-mail"></i>contato@beautysalon.com</li>
+                        <li><i class="icon-mail"></i>contato@sejavoce.com</li>
                     </ul>
                 </div>
             </div>
@@ -212,8 +208,8 @@
     <footer class="section">
         <div class="container grid">
             <div class="brand">
-                <a class="logo logo-alt" href="#home">beauty<span>salon</span>.</a>
-                <p>©2021 Beautysalon.</p>
+                <a class="logo logo-alt" href="#home">seja<span>Você</span>.</a>
+                <p>©2021 Sejavocê.</p>
                 <p>Todos os direitos reservados.</p>
             </div>
 
